--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,3 +1,56 @@
+.contentMeniu{
+    width: 780px;
+    margin: 0 auto;
+    padding-top: 20px;
+}
+.bmenu1 {
+    padding: 0;
+    margin: 0 0 10px 0;
+    position: relative;
+}
+
+.bmenu1 li {
+    display: inline;
+    font-size: 25px;
+
+}
+
+.bmenu1 li a {
+
+    text-transform: uppercase;
+    text-shadow: 1px 1px 2px rgba(89,22,20,0.3);
+    color: #581514;
+    padding: 5px 20px;
+    margin: 2px;
+    background: rgba(255,255,255,0.2);
+    letter-spacing: 1px;
+    -webkit-transform: skew(-12deg);
+    -moz-transform: skew(-12deg);
+    -o-transform: skew(-12deg);
+    -ms-transform: skew(-12deg);
+    transform: skew(-12deg);
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+    -ms-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+}
+.bmenu1:hover li a{
+    color: transparent;
+    text-shadow: 0px 0px 10px #fff;
+    background: rgba(88,22,22,0.2);
+    -webkit-transform: skew(0deg);
+    -moz-transform: skew(0deg);
+    -o-transform: skew(0deg);
+    -ms-transform: skew(0deg);
+    transform: skew(0deg);
+}
+.bmenu1 li a:hover {
+    background: transparent;
+    text-shadow: 1px 1px 10px rgba(89,22,20,0.6);
+    color: #581514;
+}
+
 .bmenu{
     padding: 0px;
     margin: 0 0 10px 0;
@@ -8,37 +61,171 @@
     display: block;
 }
 .bmenu li a{
-	display: block;
-	text-transform: uppercase;
-	text-shadow: 1px 1px 2px rgba(89,22,20,0.3);
-	color: #581514;
-	padding: 5px 20px;
-	margin: 2px;
-	background: rgba(255,255,255,0.2);
-	letter-spacing: 1px;
-	-webkit-transform: skew(-12deg);
-	-moz-transform: skew(-12deg);
-	-o-transform: skew(-12deg);
-	-ms-transform: skew(-12deg);
-	transform: skew(-12deg);
-	-webkit-transition: all 0.4s ease-in-out;
-	-moz-transition: all 0.4s ease-in-out;
-	-o-transition: all 0.4s ease-in-out;
-	-ms-transition: all 0.4s ease-in-out;
-	transition: all 0.4s ease-in-out;
+    display: block;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 2px rgba(89,22,20,0.3);
+    color: #581514;
+    padding: 5px 20px;
+    margin: 2px;
+    background: rgba(255,255,255,0.2);
+    letter-spacing: 1px;
+    -webkit-transform: skew(-12deg);
+    -moz-transform: skew(-12deg);
+    -o-transform: skew(-12deg);
+    -ms-transform: skew(-12deg);
+    transform: skew(-12deg);
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+    -ms-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
 }
 .bmenu:hover li a{
-	color: transparent;
-	text-shadow: 0px 0px 10px #fff;
-	background: rgba(88,22,22,0.2);
-	-webkit-transform: skew(0deg);
-	-moz-transform: skew(0deg);
-	-o-transform: skew(0deg);
-	-ms-transform: skew(0deg);
-	transform: skew(0deg);
+    color: transparent;
+    text-shadow: 0px 0px 10px #fff;
+    background: rgba(88,22,22,0.2);
+    -webkit-transform: skew(0deg);
+    -moz-transform: skew(0deg);
+    -o-transform: skew(0deg);
+    -ms-transform: skew(0deg);
+    transform: skew(0deg);
 }
 .bmenu li a:hover{
-	background: transparent;
-	text-shadow: 1px 1px 10px rgba(89,22,20,0.6);
-	color: #581514;
+    background: transparent;
+    text-shadow: 1px 1px 10px rgba(89,22,20,0.6);
+    color: #581514;
+}
+/*SECTION CONTAINER*/
+section#loginBox {
+    position: relative;
+    background: rgba(255,255,255,0.2);
+    background-image: initial;
+    background-position-x: initial;
+    background-position-y: initial;
+    background-size: initial;
+    background-repeat-x: initial;
+    background-repeat-y: initial;
+    background-attachment: initial;
+    background-origin: initial;
+    background-clip: initial;
+    background-color: rgba(255, 255, 255, 0.2);
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: 4px;
+    box-shadow: 0 1px 0 rgba(255,255,255,0.2) inset, 0 0 4px rgba(0,0,0,0.2);
+    margin: 40px auto;/*aligns center*/
+    padding: 24px;
+    width: 500px;
+    margin-top: 200px;
+}
+#h2Login{
+    color: rgb(34,34,34);
+    font-size: 2.2em;	
+    font-weight: 200;
+    margin: 0 0 24px 0;
+}
+#pLogin{
+    color: black;
+    font-family: "Open Sans", Arial, Helvetica, Geneva, sans-serif;
+    margin-bottom: 1px;
+}
+/*BUTTON DESIGN*/
+[class*='btn-'] {
+    border: none;
+    border-bottom: 2px solid rgba(0,0,0,.15);
+    border-top: 1px solid rgba(255,255,255,.15);
+    border-radius: 3px;
+    color: #fff;
+    display: inline-block;
+    font: -webkit-small-control;
+    font-size: .7em;
+    letter-spacing: 1px;
+    line-height: 140%;
+    padding: 10px 20px;
+    text-decoration: none;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+    text-transform: uppercase;
+
+    -webkit-transition: all 0.1s linear;
+    -moz-transition: all 0.1s linear;
+    -o-transition: all 0.1s linear;
+    transition: all 0.1s linear;
+}
+
+.btn-minimal {
+    background-color: rgb(255,255,255);
+    border-radius: 0;
+    border: 1px solid rgb( 186, 186, 186 );
+    color: black;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 1);
+}
+
+.btn-minimal:hover {
+    background-color: #4195fc;
+    border: 1px solid rgba(0,0,0,.1);
+    color: rgb(255,255,255);
+    cursor: pointer;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+}
+
+.btn-minimal:active {
+    box-shadow: 0 1px 1px rgba(0,0,0,0.15) inset;
+    text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.25);
+}
+
+
+/*FORM*/
+form.minimal label {
+    display: block;
+    margin: 6px 0;	
+}
+
+form.minimal input[type="text"],
+form.minimal input[type="email"],
+form.minimal input[type="number"],
+form.minimal input[type="search"],
+form.minimal input[type="password"],
+form.minimal textarea {
+    background-color: rgb(255,255,255);
+    border: 1px solid rgb( 186, 186, 186 );
+    border-radius: 2px;
+    -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.08);
+    -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.08);
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.08);
+    display: block;
+    font-size: 14px;
+    margin: 6px 0 12px 0;
+    padding: 8px;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 1);
+    width: 96%;
+    -webkit-transition: all 0.1s linear;
+    -moz-transition: all 0.1s linear;
+    -o-transition: all 0.1s linear;
+    transition: all 0.1s linear;
+}
+
+form.minimal input[type="text"]:focus,
+form.minimal input[type="email"]:focus,
+form.minimal input[type="number"]:focus,
+form.minimal input[type="search"]:focus,
+form.minimal input[type="password"]:focus,
+form.minimal textarea:focus,
+form.minimal select:focus { 
+    border-color: #4195fc;
+    -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 0 8px #4195fc;
+    -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 0 8px #4195fc;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 0 8px #4195fc;
+    color: rgb(0,0,0);
+}
+
+form.minimal input[type="text"]:invalid:focus,
+form.minimal input[type="email"]:invalid:focus,
+form.minimal input[type="number"]:invalid:focus,
+form.minimal input[type="search"]:invalid:focus,
+form.minimal input[type="password"]:invalid:focus,
+form.minimal textarea:invalid:focus,
+form.minimal select:invalid:focus { 
+    border-color: rgb(248,66,66);
+    -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 0 8px rgb(248,66,66);
+    -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 0 8px rgb(248,66,66);
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 0 8px rgb(248,66,66);
 }
